[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
byteorder = "1.5.0"
libc = "0.2.155"
md-5 = "0.10.6"
rand = "0.8.5"
hmac = "0.12.1"
sha1 = "0.10.6"
time = "0.3.36"
